<resources>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="versus">V.S.</string>
    <string name="win">You win!</string>
    <string name="draw">Draw</string>
    <string name="lose">Computer wins!</string>
    <string name="stats_title">Your all time statistics</string>
    <string name="stats">Win: %d  Draw: %d  Lose: %d</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="history_title">Your Game History</string>
</resources>
