<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ibRock"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/rock"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibPaper"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/paper"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibScissors"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/scissors"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/tvVersus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="60dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVersus"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/rock"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
        app:layout_constraintStart_toStartOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayer"
        app:layout_constraintStart_toStartOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tvVersus"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toEndOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvStatisticsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/stats_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatisticsTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>